--- a/MyApplication/app/src/main/res/layout/activity_contentlist.xml
+++ b/MyApplication/app/src/main/res/layout/activity_contentlist.xml
@@ -1,57 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical"
-android:id="@+id/oneContent"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
-<ImageView
-    android:id="@+id/imageView_button"
+    android:id="@+id/oneContent"
     android:layout_width="match_parent"
-    android:layout_height="250dp" />
-<TextView
-    android:id="@+id/titleText"
-    android:layout_margin="15dp"
-    android:textSize="30dp"
-    android:textStyle="bold"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-<TextView
-    android:id="@+id/dateText"
-    android:layout_margin="15dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-<TextView
-    android:id="@+id/placeText"
-    android:layout_margin="15dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_margin="15dp"
-    android:layout_height="wrap_content">
-    <ImageButton
-        android:id="@+id/unWatched"
-        android:layout_weight="1"
-        android:background="#00ff0000"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        />
-    <ImageButton
-        android:id="@+id/watched"
-        android:layout_weight="1"
-        android:background="#00ff0000"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        />
-    <ImageButton
-        android:id="@+id/comment"
-        android:layout_weight="1"
-        android:background="#00ff0000"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:src="@drawable/chat" />
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageView_button"
+        android:layout_width="match_parent"
+        android:layout_height="250dp" />
+
+    <TextView
+        android:id="@+id/titleText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:textSize="30dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/dateText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp" />
+
+    <TextView
+        android:id="@+id/timeText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp" />
+
+    <TextView
+        android:id="@+id/placeText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/unWatched"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="#00FF0000" />
+
+        <ImageButton
+            android:id="@+id/watched"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="#00FF0000"
+            android:src="@drawable/watched_event" />
+
+        <ImageButton
+            android:id="@+id/comment"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:background="#00ff0000"
+            android:src="@drawable/chat" />
+    </LinearLayout>
 
 </LinearLayout>
