--- a/MyApplication/app/src/main/res/layout/activity_loading.xml
+++ b/MyApplication/app/src/main/res/layout/activity_loading.xml
@@ -13,25 +13,12 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/loadingButton"
-        android:background="@drawable/icon"
+        android:text="추천 서비스 가동"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:background="@drawable/btn_color_selector"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="준비 되셨나요?"
-        android:id="@+id/textView3"
-        android:textSize="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="'몽땅서울'을 클릭해 주세요!"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/button2"
-        android:layout_centerHorizontal="true" />
 </RelativeLayout>
