--- a/MyApplication/app/src/main/res/layout/activity_rating1.xml
+++ b/MyApplication/app/src/main/res/layout/activity_rating1.xml
@@ -32,15 +32,25 @@
         android:id="@+id/scoreText"
         android:text="점수 :"
         android:textAlignment="center"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/ratingBar"
         />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="평가하기"
+        android:backgroundTint="#8BC34A"
         android:id="@+id/ratingButton"
         android:layout_below="@+id/scoreText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="찜 해놓기!"
+        android:backgroundTint="#8BC34A"
+        android:id="@+id/saveButton"
+        android:layout_below="@+id/ratingButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" />
 </RelativeLayout>
