--- a/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
+++ b/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
@@ -7,16 +7,31 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.youngun.myapplication.ReadyForRecommendProgressActivity">
+    tools:context=".ReadyForGetMongId">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
+        android:text="환영합니다!"
+        android:id="@+id/textView3"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/gettingInButton"
+    />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="'버튼'을 클릭해 주세요!"
+        android:id="@+id/textView4"
+        android:layout_below="@+id/gettingInButton"
+        android:layout_centerHorizontal="true" />
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gettingInButton"
+        android:src="@drawable/icon"
+        android:background="@drawable/btn_color_selector"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
