--- a/MyApplication/app/src/main/res/layout/activity_savelist.xml
+++ b/MyApplication/app/src/main/res/layout/activity_savelist.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <ImageView
-        android:id="@+id/imageView_button"
+        android:id="@+id/imageView_button2"
         android:layout_width="match_parent"
         android:layout_height="250dp" />
     <TextView
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:textSize="20dp"
+        android:textSize="25dp"
         android:textStyle="bold" />
 
     <TextView
@@ -31,23 +31,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         >
-    <TextView
-        android:id="@+id/placeText"
-        android:text="asdfljl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/expectScore"
-        android:text="예상점수 : 3.5"
-        android:textColor="#8BC34C"
-        android:textSize="15dp"
-        android:layout_margin="20dp"
-        android:layout_alignParentRight="true"
-        />
+        <TextView
+            android:id="@+id/placeText"
+            android:text="asdfljl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            />
+
     </RelativeLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -55,22 +46,6 @@
         android:layout_margin="15dp"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/unWatched"
-            android:layout_width="wrap_content"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:src="@drawable/btn_image_selector"
-            android:background="#00FF0000" />
-
-
-        <ImageButton
-            android:id="@+id/comment"
-            android:layout_width="wrap_content"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:background="#00ff0000"
-            android:src="@drawable/chat" />
     </LinearLayout>
 
 </LinearLayout>
