--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="backgroundLight">#f1f1f1</color>
     <color name="facebookColor">#3B589E</color>
     <color name="transparent">#00ff0000</color>
+    <color name ="mong_original">#8BC34A</color>
+    <color name="mong_week">#C5E1A5</color>
+    <color name="mong_strong">#689F38</color>
     <color name="shade">#E0E0E0</color>
 
 </resources>
