--- a/MyApplication/app/src/main/res/drawable/btn_image_selector_browser.xml
+++ b/MyApplication/app/src/main/res/drawable/btn_image_selector_browser.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- 클릭 했을 경우 -->
-    <item android:state_pressed="true" android:drawable="@drawable/star_colored"/>
+    <item android:state_pressed="true" android:drawable="@drawable/browser"/>
 
     <!-- 클릭하지 않은 경우 -->
-    <item android:state_pressed="false" android:drawable="@drawable/star"/>
+    <item android:state_pressed="false" android:drawable="@drawable/browser_clicked"/>
 
 </selector>
