--- a/MyApplication/app/src/main/res/layout/activity_loading.xml
+++ b/MyApplication/app/src/main/res/layout/activity_loading.xml
@@ -16,7 +16,7 @@
         android:text="추천 서비스 가동"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:background="@drawable/btn_color_selector"
+        android:background="@color/mong_week"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
