--- a/MyApplication/app/src/main/res/layout/activity_rating1.xml
+++ b/MyApplication/app/src/main/res/layout/activity_rating1.xml
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="평가하기"
-        android:backgroundTint="#8BC34A"
+        android:backgroundTint="@color/mong_strong"
         android:id="@+id/ratingButton"
         android:layout_below="@+id/scoreText"
         android:layout_centerHorizontal="true"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="찜 해놓기!"
-        android:backgroundTint="#8BC34A"
+        android:backgroundTint="@color/mong_original"
         android:id="@+id/saveButton"
         android:layout_below="@+id/ratingButton"
         android:layout_centerHorizontal="true"
