--- a/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
+++ b/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
@@ -15,23 +15,33 @@
         android:text="환영합니다!"
         android:id="@+id/textView3"
         android:textSize="30dp"
+        android:layout_margin="10dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/gettingInButton"
     />
 
+    <ProgressBar
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/progressBar_ready"
+        android:layout_centerVertical="true"
+        android:layout_below="@+id/gettingInButton"
+        android:layout_centerHorizontal="true" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="'버튼'을 클릭해 주세요!"
+        android:layout_margin="10dp"
+        android:text="'버튼을 클릭해 주세요!'"
         android:id="@+id/textView4"
-        android:layout_below="@+id/gettingInButton"
+        android:layout_below="@+id/progressBar_ready"
         android:layout_centerHorizontal="true" />
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="@drawable/icon"
         android:id="@+id/gettingInButton"
-        android:src="@drawable/icon"
-        android:background="@drawable/btn_color_selector"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
