--- a/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
+++ b/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
@@ -12,6 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#d42426"
         android:text="환영합니다!"
         android:id="@+id/textView3"
         android:textSize="30dp"
