--- a/MyApplication/app/src/main/res/layout/activity_contentlist.xml
+++ b/MyApplication/app/src/main/res/layout/activity_contentlist.xml
@@ -88,7 +88,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:background="#EEEEEE"
+        android:background="@drawable/boundary"
         ></LinearLayout>
 
 </LinearLayout>
