디자인 수정2
'보고 싶은 만큼 별주기' , 'chat버튼'
+첫 시작에 로그인하는부분 수정완료

--- a/MyApplication/app/src/main/res/layout/activity_contentlist.xml
+++ b/MyApplication/app/src/main/res/layout/activity_contentlist.xml
@@ -61,21 +61,17 @@
         android:layout_margin="15dp"
         android:orientation="horizontal">
 
-        <ImageButton
+        <Button
             android:id="@+id/unWatched"
+            android:text="보고 싶은 만큼 별 주기"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColorHighlight="@color/colorAccent"
+            android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:layout_weight="1"
-            android:src="@drawable/btn_image_selector"
-            android:background="#00FF0000" />
-        <ImageButton
-            android:id="@+id/homePage"
-            android:layout_width="wrap_content"
-            android:layout_height="55dp"
-            android:layout_weight="1"
-            android:src="@drawable/btn_image_selector_browser"
-            android:background="#00FF0000" />
-
+            android:background="#00ff0000" />
 
         <ImageButton
             android:id="@+id/comment"
@@ -83,7 +79,8 @@
             android:layout_height="55dp"
             android:layout_weight="1"
             android:background="#00ff0000"
-            android:src="@drawable/chat" />
+            android:src="@drawable/ic_chat"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
