--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundLight"
-    tools:context="com.example.youngun.myapplication.LoginActivity"
+    tools:context="com.example.youngun.myapplication.Mong.example.youngun.myapplication.LoginActivity"
     >
 
     <ImageView
