--- a/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
+++ b/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ReadyForGetMongId">
+    tools:context="mong.ddang.youngun.myapplication.ReadyForGetMongId">
 
     <TextView
         android:layout_width="wrap_content"
