--- a/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
+++ b/MyApplication/app/src/main/res/layout/activity_ready_for_recommend_progress.xml
@@ -9,40 +9,78 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="mong.ddang.youngun.myapplication.ReadyForGetMongId">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#d42426"
-        android:text="환영합니다!"
-        android:id="@+id/textView3"
-        android:textSize="30dp"
-        android:layout_margin="10dp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/gettingInButton"
-    />
 
     <ProgressBar
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:id="@+id/progressBar_ready"
-        android:layout_centerVertical="true"
-        android:layout_below="@+id/gettingInButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignTop="@+id/loadingText"
+        android:layout_toEndOf="@+id/loadingText"
+        android:layout_alignBottom="@+id/loadingText"
+        android:layout_toRightOf="@+id/loadingText" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="'버튼을 클릭해 주세요!'"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/progressBar_ready"
+        android:text="로딩중 ..."
+        android:id="@+id/loadingText"
+        android:layout_alignBottom="@+id/iconImage"
+        android:layout_toRightOf="@+id/iconImage"
         android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="@drawable/icon"
-        android:id="@+id/gettingInButton"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/phrase1"
+        android:textStyle="bold"
+        android:textSize="20dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:id="@+id/phrase2"
+        android:layout_below="@+id/phrase1"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:id="@+id/phrase3"
+        android:layout_below="@+id/phrase2"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:id="@+id/phrase4"
+        android:layout_below="@+id/phrase3"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:id="@+id/phrase5"
+        android:layout_below="@+id/phrase4"
+        android:layout_centerHorizontal="true" />
+        />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/icon"
+        android:id="@+id/iconImage"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp" />
 
 </RelativeLayout>
