--- a/MyApplication/app/src/main/res/layout/activity_contentlist.xml
+++ b/MyApplication/app/src/main/res/layout/activity_contentlist.xml
@@ -1,60 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:id="@+id/oneContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <ImageView
-        android:id="@+id/imageView_button"
-        android:layout_width="match_parent"
-        android:layout_height="250dp" />
-    <TextView
-        android:id="@+id/titleText"
-        android:text="클래식 공연"
-        android:textColor="#000000"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:textSize="20dp"
-        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/dateText"
-        android:text="날짜 : 1999-11-11"
+    <mong.ddang.youngun.myapplication.CustomContents
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp" />
-
-    <TextView
-        android:id="@+id/timeText"
-        android:text="시간:오후 몇시여"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp" />
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/recommendList"
+        custom:score="예상점수 : "
         >
-    <TextView
-        android:id="@+id/placeText"
-        android:text="중앙대학교"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/expectScore"
-        android:text="예상점수 : 3.5"
-        android:textStyle="bold"
-        android:textColor="#d42426"
-        android:textSize="15dp"
-        android:layout_margin="5dp"
-        android:layout_marginRight="15dp"
-        android:layout_alignParentRight="true"
-        />
-    </RelativeLayout>
+    </mong.ddang.youngun.myapplication.CustomContents>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,15 +22,15 @@
 
         <Button
             android:id="@+id/unWatched"
-            android:text="보고 싶은 만큼 별 주기"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textColorHighlight="@color/colorAccent"
-            android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="55dp"
             android:layout_weight="1"
-            android:background="#00ff0000" />
+            android:background="#00ff0000"
+            android:text="보고 싶은 만큼 별 주기"
+            android:textAlignment="center"
+            android:textColorHighlight="@color/colorAccent"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/comment"
@@ -79,13 +38,12 @@
             android:layout_height="55dp"
             android:layout_weight="1"
             android:background="#00ff0000"
-            android:src="@drawable/ic_chat"
-            />
+            android:src="@drawable/ic_chat" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:background="@drawable/boundary"
-        ></LinearLayout>
+        android:background="@drawable/boundary"></LinearLayout>
 
 </LinearLayout>
